# onboard-cesar-souza

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  run.py  test.env
app/: crud.py  database.py  exceptions.py  handlers.py  jwt.py  main.py  models.py  schemas.py
app/scripts/: seed_users.py
app/tests/: conftest.py  test_authenticate.py  test_create_user.py  test_get_user.py  test_hello.py  test_list_users.py
