[tool.poetry]
name = "onboard-cesar-souza"
version = "0.1.0"
description = ""
authors = ["cksar <cesarhsouzasoad@gmail.com>"]
readme = "README.md"
package-mode = false

packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "3.11.6"
python-dotenv = "1.1.0"
fastapi = "0.115.12"
uvicorn = {extras = ["standard"], version = "0.34.2"}
sqlalchemy = "2.0.40"
psycopg2-binary = "2.9.10"
asyncpg = "0.30.0"
bcrypt = "4.3.0"

[tool.poetry.scripts]
serve = "run:main"

[tool.poetry.group.dev.dependencies]
mypy = "1.15.0"

[tool.pyright]
exclude = [".venv"]
typeCheckingMode = "off"
venv = ".venv"
venvPath = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
